# telegram-notify-bot

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  scheduler.yml
core/: interfaces.py  models.py
infrastructure/: database.py  repositories.py  telegram_adapter.py
services/: admin.py  ai_service.py  feedback.py  location.py  notifier.py  price_data.py  price_service.py  pricing_model.py
tests/: conftest.py  test_ai_estimator.py  test_ai_service.py  test_database_config.py  test_feedback.py  test_flows.py  test_location.py  test_main.py  test_price_service.py  test_pricing_model.py  test_repositories.py
